[package]
name = "match-pinyin-with-hanzi"
version = "0.1.0"
edition = "2018"
description = "Checks whether the sentence in Chinese characters (汉字) matches with the sentence in pinyin (拼音)."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = "0.8.0"
pinyin-parser = "0.1.4"