[package]
description = "Checks whether the sentence in Chinese characters (汉字) matches with the sentence in pinyin (拼音). Erhua is supported."
edition = "2018"
license = "MIT"
name = "match-pinyin-with-hanzi"
repository = "https://github.com/sozysozbot/match-pinyin-with-hanzi"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = "0.8.0"
pinyin-parser = "0.1.4"
